# cuda-fractal-renderer

./: .gitignore  README.md  format.sh  pyproject.toml
src/cuda_fractal_renderer/: __init__.py  kernel.cu  kernel.py
