[project]
name = "cuda-fractal-renderer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pycuda>=2025.1.1",
]

[project.scripts]
cuda_fractal_renderer = "cuda_fractal_renderer:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
